--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "f1",
+  "name": "dope",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
+    "body-parser": "^2.2.0",
+    "chart.js": "^4.5.1",
+    "chartjs-node-canvas": "^5.0.0",
+    "cloudinary": "^2.8.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   }
 }
